--- a/src/main/resources/templates/testFolder/index.html
+++ b/src/main/resources/templates/testFolder/index.html
@@ -4,30 +4,17 @@
     <meta charset="UTF-8">
     <title>Kinoha</title>
 
-    <link rel="stylesheet" href="../../static/css/test.css">
+    <link rel="stylesheet" href="../../static/css/test.css"/>
 </head>
 <body>
-    <header></header>
+<header><b>Hat</b></header>
+    <aside id = "aside2"></aside>
     <main>
-    <select multiple>
-        <option >Merc</option>
-        <option selected>BMW</option>
-        <option>Tayota</option>
-    </select>
+        <div><p style="color: black">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ea eveniet harum ipsum officia repellendus similique tempore? Alias aliquam aliquid, autem dolorem ducimus, est harum incidunt, ipsa ipsam pariatur quibusdam?
+        </p></div>
     </main>
-
-    <aside>
-        <details>
-            <summary>open</summary>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, suscipit!
-        </details>
-    </aside>
-
-    <footer>
-        <progress max="15" value="2"/>
-    </footer>
-
-
-
+    <aside></aside>
+    <footer></footer>
 </body>
 </html>
